crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__memory_copy.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 22,
          "character": 16
        },
        "end": {
          "line": 22,
          "character": 19
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 18
        },
        "end": {
          "line": 27,
          "character": 21
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 32,
          "character": 16
        },
        "end": {
          "line": 32,
          "character": 19
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 32,
          "character": 20
        },
        "end": {
          "line": 32,
          "character": 23
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "unexpected immediate"
    }
  ]
}
