crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__ref_type.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 17,
          "character": 13
        },
        "end": {
          "line": 17,
          "character": 14
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected ref type"
    }
  ]
}
