crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__v128_const.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 15
        },
        "end": {
          "line": 3,
          "character": 16
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected shape descriptor"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 17
        },
        "end": {
          "line": 3,
          "character": 18
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 14
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "missing shape descriptor"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 22
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected 16 integers in `v128.const`"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 4
        },
        "end": {
          "line": 9,
          "character": 26
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected 8 integers in `v128.const`"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 23
        },
        "end": {
          "line": 9,
          "character": 26
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected integer"
    },
    {
      "range": {
        "start": {
          "line": 11,
          "character": 4
        },
        "end": {
          "line": 11,
          "character": 20
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected 4 integers in `v128.const`"
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 4
        },
        "end": {
          "line": 13,
          "character": 20
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected 2 integers in `v128.const`"
    },
    {
      "range": {
        "start": {
          "line": 15,
          "character": 4
        },
        "end": {
          "line": 15,
          "character": 29
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected 4 floating-point numbers in `v128.const`"
    },
    {
      "range": {
        "start": {
          "line": 15,
          "character": 27
        },
        "end": {
          "line": 15,
          "character": 29
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected floating-point number"
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 4
        },
        "end": {
          "line": 17,
          "character": 20
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected 2 floating-point numbers in `v128.const`"
    }
  ]
}
